dashboard/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  selector:
    app: kubernetes-dashboard
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  type: LoadBalancer
